--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!-- HTML -->
 <html>
   <head>
-    <title>IFrame Manager</title>
+    <title>Multiple Windows Nagih Console</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>IFrame Manager</h1>
+    <h1>Multiple Windows Nagih Console</h1>
     <button id="add-button">+</button>
-    <input id="link-input" type="text" placeholder="Enter link here" />
-    <button id="search-button">Cari</button>
+    <input id="link-input" type="text" placeholder="Enter link here"/>
+    <button id="search-button">Open</button>
     <div id="iframe-container"></div>
     <script src="script.js"></script>
   </body>
