--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Multiple Windows Nagih Console</h1>
     <button id="add-button">+</button>
-    <input id="link-input" type="text" placeholder="Enter link here"/>
+    <input type="url" id="link-input" type="text" placeholder="Enter link here"/>
     <button id="search-button">Open</button>
     <div id="iframe-container"></div>
     <script src="script.js"></script>
